fix (again) suggestion item width to accommodate scrollbars

--- a/app/assets/stylesheets/card_maker.scss
+++ b/app/assets/stylesheets/card_maker.scss
@@ -697,7 +697,7 @@ $col-border-width: 5px;
     line-height: $height;
     margin-top: 2px;
     text-align: center;
-    width: 171px;
+    width: 164px;
   }
 
   .arrow {
